Fix Maven Spring Boot plugin and add startup scripts
- Updated Spring Boot Maven plugin version to 3.5.6
- Added proper plugin configuration with executions
- Created start-backend.bat for easy backend startup
- Created start-frontend.bat for easy frontend startup
- Created start-both.bat for complete application startup
- Fixed Maven plugin recognition issues

Now you can use:
- start-both.bat (recommended) - starts both servers
- start-backend.bat - starts only backend
- start-frontend.bat - starts only frontend

Or manually:
- Backend: cd springapp && mvn clean package -DskipTests && java -jar target/springapp-0.0.1-SNAPSHOT.jar
- Frontend: cd angularapp && npm start